# grs

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 177990d8f398_add_recommendation_tables.py  2b099e706184_create_questions_tables.py  9b6924210150_add_recommendation_tables.py  f2a8c3d4e5b6_add_unique_game_tags_pair.py
backend/app/: main.py
backend/app/api/routes/: questions.py  recommend.py
backend/app/core/: config.py  exceptions.py  settings.py  tag_descriptions.py
backend/app/db/: engine.py  import_json_seed_data.py  models.py  reset_questionnaire_seed_data.py  reset_seed_data.py  seed_questions.py  seed_recommendation_data.py  session.py  upsert_games_and_tags.py  upsert_json_seed_data.py
backend/app/schemas/: common.py  llm_rerank.py  questions.py  recommend.py
backend/app/services/: answer_validation_service.py  profile_service.py  question_service.py  reason_service.py  recommendation_service.py  rerank_service.py
backend/data_pipeline/seeds/: game_final.json  game_tags_final.json  games_final.json  option_tag_weights_final.json  questions_final.json  tags.json
backend/tests/: conftest.py  test_questions_api.py  test_recommend_api.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/data/: mockQuestions.js  mockResults.js
frontend/src/hooks/: useQuizFlow.js
frontend/src/lib/: api.js
frontend/src/pages/: HomePage.jsx  QuizPage.jsx  (+1 more)
(+25 files in other folders)
